resolve whitespace/scrollbar issue per Valeria. Comment pagination buttons on product.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -28,13 +28,15 @@ $small-break: 768px;
 $med-break: 905px;
 $large-break: 1235px;
 //deafults***********
-html,body {
-  height:100%;
+html,body
+{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   -webkit-font-smoothing: subpixel-antialiased;
 	-moz-osx-font-smoothing: auto;
-}
-body{
-  // padding-top: 260px;
 }
 .light-text{
   color: white !important;
